force-app/main/default/objects/Employee__c/fields/Aadhaar_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Aadhaar_Card_Number__c</fullName>
    <label>Aadhaar Card Number</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>