force-app/main/default/objects/Employee__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Address Location of Employee.</description>
    <inlineHelpText>Address Location of Employee.</inlineHelpText>
    <label>Address</label>
    <referenceTo>Locations__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>