force-app/main/default/objects/Employee__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Age of the Employee calculated automatically.</description>
    <formula>(TODAY() - Date_of_Birth__c ) / 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Age of the Employee calculated automatically.</inlineHelpText>
    <label>Age</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>