force-app/main/default/objects/Employee__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>Date of birth of the employee in question.</description>
    <inlineHelpText>Date of birth of the employee in question.</inlineHelpText>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>