force-app/main/default/objects/Employee__c/fields/Date_of_Joining__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Joining__c</fullName>
    <description>The date on which the Employee has reported as first day.</description>
    <inlineHelpText>Enter the date when the employee has reported.</inlineHelpText>
    <label>Date of Joining</label>
    <type>Date</type>
</CustomField>