force-app/main/default/objects/Employee__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>A valid Email address of the employee.</description>
    <inlineHelpText>Give a valid and active e-mail address</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>