force-app/main/default/objects/Employee__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Mobile number of Employee.</description>
    <inlineHelpText>Mobile number of Employee.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>